--- a/week_1/multivariate distributions - joint pdf example.ipynb
+++ b/week_1/multivariate distributions - joint pdf example.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "4bc5e3de",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from sympy import *\n",
@@ -16,7 +20,11 @@
   {
    "cell_type": "markdown",
    "id": "867dc3cf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "define the function"
    ]
@@ -25,7 +33,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "9559a464",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -49,7 +61,11 @@
   {
    "cell_type": "markdown",
    "id": "c5619d2d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "integrate for $x$"
    ]
@@ -58,7 +74,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "23fbd2d4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -82,7 +102,11 @@
   {
    "cell_type": "markdown",
    "id": "1451320e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "substitute $x=2$, because 2 is the upper bound of the range for x"
    ]
@@ -91,7 +115,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "c123087a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -115,7 +143,11 @@
   {
    "cell_type": "markdown",
    "id": "38d03eb7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "integrate for $y$"
    ]
@@ -124,7 +156,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "3e49ff34",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -148,7 +184,11 @@
   {
    "cell_type": "markdown",
    "id": "f4698426",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "substitute $y=1$ because 1 is the upper bound of the range for $y$"
    ]
@@ -157,7 +197,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "5bb2722b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -181,7 +225,11 @@
   {
    "cell_type": "markdown",
    "id": "62b244df",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "By definition this function must = 1 to be a properly defined denisty function. \n",
     "\n",
@@ -194,7 +242,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "7fba61eb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -214,7 +266,11 @@
   {
    "cell_type": "markdown",
    "id": "bb930dfc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "therefore $c = 0.25$"
    ]
