--- a/week_2/wk2 - questions Criteria for Optimality of Estimators.ipynb
+++ b/week_2/wk2 - questions Criteria for Optimality of Estimators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "391be560",
    "metadata": {
     "pycharm": {
@@ -11,17 +11,33 @@
    },
    "outputs": [],
    "source": [
-    "from sympy import *"
+    "from sympy import *\n",
+    "from Cython import declare\n",
+    "from sympy.stats import Expectation, Normal, Probability, Poisson\n",
+    "from sympy import symbols, Integral, Sum, log"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "84eeea80",
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "# establish the symbols that we will use\n",
+    "e, n, c, t, x, y, z, L, X = symbols(\"e, n, c, t, x, y, z, L, X\")\n",
+    "mu = symbols(\"mu\")\n",
+    "theta = symbols(\"theta\")\n",
+    "sigma = symbols(\"sigma\", positive=True)\n",
+    "lamda = symbols(\"lamda\")\n"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "### Score & Information\n",
     "For simplicty take $\\theta$ to be one-dimensional. (For a vector $\\theta$ apply the argument below for each of the components of $\\theta$).\n",
@@ -30,7 +46,7 @@
     "\n",
     "$$dX = dX_1 dX_2,...,dX_n$$\n",
     "\n",
-    "and a single integral sign to denote the integration over the region in $R^n$. Then \n",
+    "and a single integral sign to denote the integration over the region in $R^n$. Then\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -46,19 +62,28 @@
     "The above-defined notion of Information is fundamental in Statistics. It has made RA Fisher ()1890 - 1962), a reknowned applied statistician, one of the greatest of all time.\n",
     "\n",
     "Among his pivotal contributions to the field, the introduction of the Maximum Likelihood Estimation method, the analysis of variance (ANOVA) and the notion of *Expected Fisher Information* (as defined above) are the most outstanding."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8688d7d4",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "# expr = ((L) * (x, theta))\n",
+    "# expr"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": []
+   }
   },
   {
    "cell_type": "markdown",
@@ -93,16 +118,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# step 1: define the expression using the pdf"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "c3f4573a",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1/(e**(x/theta)*theta)",
+      "text/latex": "$\\displaystyle \\frac{e^{- \\frac{x}{\\theta}}}{\\theta}$"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = (1/theta)*e**(-x/theta)\n",
+    "expr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# step 2: set up the integral"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Integral(1/(e**(x/theta)*theta), x)",
+      "text/latex": "$\\displaystyle \\int \\frac{e^{- \\frac{x}{\\theta}}}{\\theta}\\, dx$"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Integral(expr, x)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# step 3:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -134,16 +256,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "define the expression"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "2db7b29a",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "theta**x*(1 - theta)**(1 - x)",
+      "text/latex": "$\\displaystyle \\theta^{x} \\left(1 - \\theta\\right)^{1 - x}$"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr = theta ** x * (1 - theta) ** (1 - x)\n",
+    "expr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "f5f47d6a",
    "metadata": {
     "pycharm": {
@@ -229,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "dabc0e8f",
    "metadata": {
     "pycharm": {
@@ -266,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "ff135fe7",
    "metadata": {
     "pycharm": {
@@ -280,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "331ecbf5",
    "metadata": {
     "pycharm": {
@@ -294,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a2793e5a",
    "metadata": {
     "pycharm": {
@@ -325,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d0573a09",
    "metadata": {
     "pycharm": {
@@ -352,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "75d9c5b3",
    "metadata": {
     "pycharm": {
@@ -377,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "bbb8c78a",
    "metadata": {
     "pycharm": {
