--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -16,12 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "outputs": [],
    "source": [
-    "start = datetime.strptime('May 3 2022  11:59', '%b %d %Y %H:%M')  # utc timezone\n",
-    "quiz_3 = datetime.strptime('Jun 15 2022  11:59', '%b %d %Y %H:%M')  # week 6, wednesday 12 pm\n",
-    "final_exam = datetime.strptime('Jun 22 2022  11:59', '%b %d %Y %H:%M')  # week 7 tuesday 8am"
+    "start = datetime.strptime('May 3 2022  11:59', '%b %d %Y %H:%M')\n",
+    "final_exam = datetime.strptime('Jun 28 2022  19:00', '%b %d %Y %H:%M')  # week 7 tuesday 8am"
    ],
    "metadata": {
     "collapsed": false,
@@ -32,48 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "nowdate = datetime.now()\n",
-    "count = int((quiz_3-nowdate).total_seconds())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 days 10 hours 35 minutes 27 seconds until quiz 3 for Statistical Inference for Data Scientists\n"
-     ]
-    }
-   ],
-   "source": [
-    "days = count//86400\n",
-    "hours = (count-days*86400)//3600\n",
-    "minutes = (count-days*86400-hours*3600)//60\n",
-    "seconds = count-days*86400-hours*3600-minutes*60\n",
-    "print(f\"{days} days {hours} hours {minutes} minutes {seconds} seconds until quiz 3 for Statistical Inference for Data Scientists\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "nowdate = datetime.now()\n",
@@ -88,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 days 10 hours 35 minutes 27 seconds until the final exam for Statistical Inference for Data Scientists\n"
+      "3 days 23 hours 25 minutes 20 seconds until the final exam for Statistical Inference for Data Scientists\n"
      ]
     }
    ],
