starting to get the hang of it now. better late than never i guess

--- a/week_1/transformations examples slide 72 - 76.ipynb
+++ b/week_1/transformations examples slide 72 - 76.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -12,11 +12,10 @@
    "outputs": [],
    "source": [
     "from sympy import *\n",
-    "from sympy import symbols\n",
     "init_printing()\n",
     "from Cython import declare\n",
-    "from sympy.stats import Expectation, Normal, Probability, Poisson\n",
-    "from sympy import symbols, Integral, Sum, Rational, E"
+    "from sympy.stats import P, E, Expectation, Normal, Probability, Poisson, Binomial, Bernoulli, ContinuousRV, density, Binomial, Geometric, Zeta, Beta, Cauchy, ChiSquared, Exponential, Gamma, Normal\n",
+    "from sympy import symbols, Integral, Sum, Rational, E, Eq, simplify, oo, S"
    ]
   },
   {
