--- a/week_3/week 3 - bayesian estimators.ipynb
+++ b/week_3/week 3 - bayesian estimators.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "54fea334",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from sympy import *"
@@ -13,7 +17,11 @@
   {
    "cell_type": "markdown",
    "id": "84df4e6e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Quadratic and Absolute Value Loss minimisation\n",
     "\n",
@@ -23,7 +31,11 @@
   {
    "cell_type": "markdown",
    "id": "9cdb526f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**solution**\n",
     "setting the derivative with respect to *a*to zero we get\n",
@@ -43,14 +55,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9783be7b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "2e96ccf7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**Question 2**: show that for a given random variable $Y$ with $E|Y| < \\infty$, the function $q_2(b) = E|Y - b|$ is minimised for $b* = \\text{median}(Y)$"
    ]
@@ -58,7 +78,11 @@
   {
    "cell_type": "markdown",
    "id": "328c8342",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**solution**\n",
     "continuous case for simplicity. Denote the density of Y by $f(y)$ and the cdf by $F(y)$. Having in mind the definition of absolute value we have:\n",
@@ -80,14 +104,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2a16efda",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "a7b7af6b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Bayes Estimator\n",
     "\n",
@@ -105,7 +137,11 @@
   {
    "cell_type": "markdown",
    "id": "efa6bb0f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**Solution**\n",
     "Note that we have a *single* observation $X$ only. Now $f(x|\\theta) = \\dfrac{1}{\\theta}i_{(x,\\infty)}(\\theta)$ implies that \n",
@@ -134,14 +170,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ad99bc7c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "bb2f70c5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**Question 2**: Find the Bayes estimator of $\\theta$ with respect to absolute value loss $L(\\theta, a) = |\\theta - a|$"
    ]
@@ -149,7 +193,11 @@
   {
    "cell_type": "markdown",
    "id": "b8c5c5c5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**Solution**\n",
     "\n",
@@ -166,14 +214,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "45f52081",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "2598a21d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**question**\n",
     "Let $X_1, X_2,..., X_n$ be a random sample from the normal density with mean $mu$ and variance 1. Consider estimating $\\mu$ with a squared-error loss. Assume that the prior $\\tau(\\mu)$ is a normal density with mean $\\mu_0$ and variance 1\n",
@@ -186,7 +242,11 @@
   {
    "cell_type": "markdown",
    "id": "af96ca25",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**Solution**\n",
     "\n",
@@ -218,7 +278,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4bc629c4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
