--- a/week_3/likelihood, inference and first order asymptotics.ipynb
+++ b/week_3/likelihood, inference and first order asymptotics.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "d2710c1e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**Regular Case**"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "251a744b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let $X \\sim \\text{ Poisson }(\\lambda)$, where parameter $\\lambda > 0$ and pmf\n",
     "\n",
@@ -23,7 +31,11 @@
   {
    "cell_type": "markdown",
    "id": "4e7f4bde",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**solution**\n",
     "\n",
@@ -56,14 +68,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "637b83be",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "339fee28",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**irregular case**"
    ]
@@ -71,7 +91,11 @@
   {
    "cell_type": "markdown",
    "id": "566a33b0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let $X_1, X_2, ..., X_n$ be a sample from the density\n",
     "\n",
@@ -83,7 +107,11 @@
   {
    "cell_type": "markdown",
    "id": "e7a3b954",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "**solution**\n",
     "\n",
@@ -100,7 +128,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b7206251",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
