--- a/week_2/wk2 - questions Criteria for Optimality of Estimators.ipynb
+++ b/week_2/wk2 - questions Criteria for Optimality of Estimators.ipynb
@@ -20,6 +20,12 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "9e000b41",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# establish the symbols that we will use\n",
@@ -28,16 +34,16 @@
     "theta = symbols(\"theta\")\n",
     "sigma = symbols(\"sigma\", positive=True)\n",
     "lamda = symbols(\"lamda\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "139a6083",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Score & Information\n",
     "For simplicty take $\\theta$ to be one-dimensional. (For a vector $\\theta$ apply the argument below for each of the components of $\\theta$).\n",
@@ -62,28 +68,22 @@
     "The above-defined notion of Information is fundamental in Statistics. It has made RA Fisher ()1890 - 1962), a reknowned applied statistician, one of the greatest of all time.\n",
     "\n",
     "Among his pivotal contributions to the field, the introduction of the Maximum Likelihood Estimation method, the analysis of variance (ANOVA) and the notion of *Expected Fisher Information* (as defined above) are the most outstanding."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "6f08c6dc",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# expr = ((L) * (x, theta))\n",
     "# expr"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,15 +119,15 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# step 1: define the expression using the pdf"
-   ],
+   "id": "42bc4adb",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "# step 1: define the expression using the pdf"
+   ]
   },
   {
    "cell_type": "code",
@@ -141,8 +141,12 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "1/(e**(x/theta)*theta)",
-      "text/latex": "$\\displaystyle \\frac{e^{- \\frac{x}{\\theta}}}{\\theta}$"
+      "text/latex": [
+       "$\\displaystyle \\frac{e^{- \\frac{x}{\\theta}}}{\\theta}$"
+      ],
+      "text/plain": [
+       "1/(e**(x/theta)*theta)"
+      ]
      },
      "execution_count": 26,
      "metadata": {},
@@ -156,24 +160,34 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# step 2: set up the integral"
-   ],
+   "id": "c4e8cf1a",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "# step 2: set up the integral"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "584622cf",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "Integral(1/(e**(x/theta)*theta), x)",
-      "text/latex": "$\\displaystyle \\int \\frac{e^{- \\frac{x}{\\theta}}}{\\theta}\\, dx$"
+      "text/latex": [
+       "$\\displaystyle \\int \\frac{e^{- \\frac{x}{\\theta}}}{\\theta}\\, dx$"
+      ],
+      "text/plain": [
+       "Integral(1/(e**(x/theta)*theta), x)"
+      ]
      },
      "execution_count": 27,
      "metadata": {},
@@ -182,49 +196,43 @@
    ],
    "source": [
     "Integral(expr, x)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# step 3:"
-   ],
+   "id": "d582cc67",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "# step 3:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "outputs": [],
-   "source": [],
+   "id": "78daefbd",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "outputs": [],
-   "source": [],
+   "id": "688803d5",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -257,15 +265,15 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "define the expression"
-   ],
+   "id": "803345ec",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "define the expression"
+   ]
   },
   {
    "cell_type": "code",
@@ -279,8 +287,12 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "theta**x*(1 - theta)**(1 - x)",
-      "text/latex": "$\\displaystyle \\theta^{x} \\left(1 - \\theta\\right)^{1 - x}$"
+      "text/latex": [
+       "$\\displaystyle \\theta^{x} \\left(1 - \\theta\\right)^{1 - x}$"
+      ],
+      "text/plain": [
+       "theta**x*(1 - theta)**(1 - x)"
+      ]
      },
      "execution_count": 28,
      "metadata": {},
@@ -551,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
